--- a/src/test/resources/dev2Mobile.properties
+++ b/src/test/resources/dev2Mobile.properties
@@ -1,5 +1,5 @@
-baseURL=https://gwadmin-valid.tech.rcimobility.com/api/v2
-members=user_credentials_valid.csv
+baseURL=https://gwmobile-dev.tech.rcimobility.com/api/v2
+members=user_credentials_dev.csv
 bookingSearchFilteredByAddress=searchBookingDataUsingAddress.csv
 superAdminUsername=super.admin@ekino.com
 password=1Aaaaaaa
